[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certbot-dns-freedns"
version = "0.1.0"
description = "FreeDNS Authenticator plugin for Certbot"
readme = "README.rst"
authors = [{ name = "Rafael Schleuss", email = "rschleuss@gmail.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["FreeDNS", "Certbot"]
dependencies = [
    "acme>=1.22.0",
    "certbot>=1.22.0",
    "setuptools",
    "requests>=2.26.0",
    "bs4>=0.0.1"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/schleuss/certbot_dns_freedns"
